<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/spring"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <EditText
            android:id="@+id/datetext"
            android:layout_width="250dp"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/selectdate">
        </EditText>

        <ImageButton
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/datetext"
            android:contentDescription="@string/selectdate"
            android:onClick="showDatePickerDialog"
            android:src="@drawable/ic_action_edit" />
        </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/journal_edit_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/new_title">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

        <EditText
            android:id="@+id/journal_edit_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="top"
            android:hint="@string/todo_edit_description"
            android:imeOptions="actionNext" >
        </EditText>


    </LinearLayout>
    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journal_save"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/LinearLayout2">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_Button"
            android:text="@string/cancel_button"
            android:layout_toRightOf="@+id/todo_edit_button" />
   </LinearLayout>

</LinearLayout>